--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "build:unpkg":
       "rollup --config build/rollup.config.js --format iife --file dist/el-number-range.min.js",
     "prepublishOnly": "npm run build",
-    "precommit": "pretty-quick --staged",
-    "postpublish": "git add docs && git add dist && git commit -a --amend"
+    "precommit": "pretty-quick --staged"
   },
   "peerDependencies": {
     "element-ui": "^2.4.9",
