--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "type": "git",
     "url": "https://github.com/FEMessage/el-number-range.git"
   },
-  "keywords": ["vue", "sfc", "component"],
-  "files": ["src", "dist", "yarn.lock"],
+  "keywords": [
+    "vue",
+    "sfc",
+    "component"
+  ],
+  "files": [
+    "src",
+    "dist",
+    "yarn.lock"
+  ],
   "main": "dist/el-number-range.umd.js",
   "module": "dist/el-number-range.esm.js",
   "unpkg": "dist/el-number-range.min.js",
@@ -20,15 +28,13 @@
     "dev": "vue-styleguidist server",
     "doc": "vue-styleguidist build",
     "test": "jest",
-    "build":
-      "npm run build:unpkg & npm run build:es & npm run build:umd & npm run doc",
-    "build:umd":
-      "rollup --config build/rollup.config.js --format umd --file dist/el-number-range.umd.js",
-    "build:es":
-      "rollup --config build/rollup.config.js --format es --file dist/el-number-range.esm.js",
-    "build:unpkg":
-      "rollup --config build/rollup.config.js --format iife --file dist/el-number-range.min.js",
-    "precommit": "pretty-quick --staged"
+    "build": "npm run build:unpkg & npm run build:es & npm run build:umd & npm run doc",
+    "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/el-number-range.umd.js",
+    "build:es": "rollup --config build/rollup.config.js --format es --file dist/el-number-range.esm.js",
+    "build:unpkg": "rollup --config build/rollup.config.js --format iife --file dist/el-number-range.min.js",
+    "precommit": "pretty-quick --staged",
+    "stdver": "standard-version -m '[skip ci] chore(release): v%s'",
+    "release": "gren release --override"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
@@ -55,21 +61,26 @@
     "vue": "^2.5.16",
     "vue-jest": "^3.0.4",
     "vue-loader": "^15.7.0",
-    "vue-styleguidist": "^3.11.4",
+    "vue-styleguidist": "3.11.4",
     "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.29.6"
+    "webpack": "^4.29.6",
+    "github-release-notes": "^0.17.0",
+    "standard-version": "^6.0.1"
   },
   "publishConfig": {
     "access": "public"
   },
   "jest": {
-    "moduleFileExtensions": ["js", "vue"],
+    "moduleFileExtensions": [
+      "js",
+      "vue"
+    ],
     "transform": {
       "^.+\\.js$": "./node_modules/babel-jest",
       "^.+\\.vue$": "./node_modules/vue-jest"
     }
   },
-  "vue-sfc-cli": "1.0.0",
+  "vue-sfc-cli": "1.7.0",
   "engines": {
     "node": ">= 4.0.0",
     "npm": ">= 3.0.0"
