--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,10 @@ git:
 install:
 - yarn --frozen-lockfile
 script:
-- yarn build
+- ./build.sh
+after_success:
+- GREN_GITHUB_TOKEN=$GITHUB_TOKEN yarn release
+- sleep 3 && ./notify.sh
 cache: yarn
 deploy:
 - provider: pages
