--- a/package.json
+++ b/package.json
@@ -8,16 +8,8 @@
     "type": "git",
     "url": "https://github.com/FEMessage/el-number-range.git"
   },
-  "keywords": [
-    "vue",
-    "sfc",
-    "component"
-  ],
-  "files": [
-    "src",
-    "dist",
-    "yarn.lock"
-  ],
+  "keywords": ["vue", "sfc", "component"],
+  "files": ["src", "dist", "yarn.lock"],
   "main": "dist/el-number-range.umd.js",
   "module": "dist/el-number-range.esm.js",
   "unpkg": "dist/el-number-range.min.js",
@@ -27,10 +19,14 @@
   "scripts": {
     "dev": "vue-styleguidist server",
     "doc": "vue-styleguidist build",
-    "build": "npm run build:unpkg & npm run build:es & npm run build:umd & npm run doc",
-    "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/el-number-range.umd.js",
-    "build:es": "rollup --config build/rollup.config.js --format es --file dist/el-number-range.esm.js",
-    "build:unpkg": "rollup --config build/rollup.config.js --format iife --file dist/el-number-range.min.js",
+    "build":
+      "npm run build:unpkg & npm run build:es & npm run build:umd & npm run doc",
+    "build:umd":
+      "rollup --config build/rollup.config.js --format umd --file dist/el-number-range.umd.js",
+    "build:es":
+      "rollup --config build/rollup.config.js --format es --file dist/el-number-range.esm.js",
+    "build:unpkg":
+      "rollup --config build/rollup.config.js --format iife --file dist/el-number-range.min.js",
     "precommit": "pretty-quick --staged",
     "stdver": "standard-version -m '[skip ci] chore(release): v%s'",
     "release": "gren release --override"
@@ -65,7 +61,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "vue-sfc-cli": "1.7.0",
+  "vue-sfc-cli": "1.10.0",
   "engines": {
     "node": ">= 4.0.0",
     "npm": ">= 3.0.0"
