--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/core": "^7.4.3",
     "@babel/plugin-transform-runtime": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
+    "@femessage/github-release-notes": "^0.19.0",
     "babel-loader": "^8.0.5",
     "element-ui": "^2.7.2",
     "file-loader": "^3.0.1",
@@ -50,15 +51,14 @@
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-terser": "^4.0.4",
     "rollup-plugin-vue": "^4.7.2",
+    "standard-version": "^6.0.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.16",
     "vue-loader": "^15.7.0",
     "vue-styleguidist": "3.11.4",
     "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.29.6",
-    "github-release-notes": "^0.17.0",
-    "standard-version": "^6.0.1"
+    "webpack": "^4.29.6"
   },
   "publishConfig": {
     "access": "public"
@@ -67,5 +67,6 @@
   "engines": {
     "node": ">= 4.0.0",
     "npm": ">= 3.0.0"
-  }
+  },
+  "gren": "@femessage/grenrc"
 }
